[gd_scene load_steps=7 format=2]

[ext_resource path="res://resources/tilesets/town_tileset.tres" type="TileSet" id=1]
[ext_resource path="res://objects/Villager.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/EndScene.gd" type="Script" id=3]
[ext_resource path="res://resources/sound/monplaisir-loyalty-freak-music-soundtrack.ogg" type="AudioStream" id=4]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://resources/fonts/20832.ttf"

[sub_resource type="DynamicFont" id=2]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 1 )

[node name="EndCutscene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 960, 640 )
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Villager" parent="." instance=ExtResource( 2 )]
position = Vector2( 120, 148 )

[node name="Camera2D" type="Camera2D" parent="Villager"]
position = Vector2( -121.226, -7.296 )
offset = Vector2( 0, 16 )
current = true
zoom = Vector2( 0.25, 0.25 )
limit_left = 0
limit_top = 0

[node name="Background" type="Node2D" parent="."]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Floor" type="TileMap" parent="Background"]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 8, 0, 7, 8, 0, 8, 8, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 8, 0, 65543, 8, 0, 65544, 8, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 8, 0, 131079, 8, 0, 131080, 8, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 8, 0, 196615, 8, 0, 196616, 8, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 8, 0, 262151, 8, 0, 262152, 8, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 8, 0, 327687, 8, 0, 327688, 8, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 8, 0, 393223, 8, 0, 393224, 8, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 8, 0, 458759, 8, 0, 458760, 8, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 8, 0, 524295, 8, 0, 524296, 8, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 8, 0, 589831, 8, 0, 589832, 8, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0 )

[node name="Walls" type="TileMap" parent="Background"]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 1, 28, 0, 4, 0, 0, 5, 28, 0, 6, 8, 0, 7, 8, 0, 8, 8, 0, 9, 0, 0, 10, 28, 0, 11, 0, 0, 12, 10, 0, 13, 0, 0, 65536, 0, 0, 65537, 9, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 9, 0, 65542, 8, 0, 65543, 8, 0, 65544, 8, 0, 65545, 0, 0, 65546, 9, 0, 65547, 0, 0, 65548, 0, 0, 65549, 28, 0, 65550, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 10, 0, 131075, 0, 0, 131076, 10, 0, 131077, 0, 0, 131078, 8, 0, 131079, 8, 0, 131080, 8, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 9, 0, 131086, 0, 0, 196608, 10, 0, 196609, 0, 0, 196610, 0, 0, 196611, 28, 0, 196612, 0, 0, 196613, 0, 0, 196614, 8, 0, 196615, 8, 0, 196616, 8, 0, 196617, 10, 0, 196618, 0, 0, 196619, 10, 0, 196620, 0, 0, 196621, 0, 0, 196622, 28, 0, 262144, 0, 0, 262145, 28, 0, 262146, 0, 0, 262147, 9, 0, 262148, 0, 0, 262149, 0, 0, 262150, 8, 0, 262151, 8, 0, 262152, 8, 0, 262153, 0, 0, 262154, 28, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 9, 0, 327680, 0, 0, 327681, 9, 0, 327682, 0, 0, 327683, 0, 0, 327684, 28, 0, 327685, 0, 0, 327686, 8, 0, 327687, 8, 0, 327688, 8, 0, 327689, 0, 0, 327690, 9, 0, 327691, 0, 0, 327692, 28, 0, 327693, 10, 0, 327694, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 10, 0, 393219, 0, 0, 393220, 9, 0, 393221, 0, 0, 393222, 8, 0, 393223, 8, 0, 393224, 8, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 9, 0, 393229, 0, 0, 393230, 0, 0, 458752, 0, 0, 458753, 28, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 8, 0, 458759, 8, 0, 458760, 8, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 28, 0, 458766, 0, 0, 524288, 0, 0, 524289, 9, 0, 524290, 0, 0, 524291, 28, 0, 524292, 0, 0, 524293, 10, 0, 524294, 8, 0, 524295, 8, 0, 524296, 8, 0, 524297, 10, 0, 524298, 0, 0, 524299, 28, 0, 524300, 0, 0, 524301, 9, 0, 524302, 0, 0, 589824, 10, 0, 589825, 0, 0, 589826, 0, 0, 589827, 9, 0, 589828, 0, 0, 589829, 0, 0, 589830, 8, 0, 589831, 8, 0, 589832, 8, 0, 589833, 0, 0, 589834, 0, 0, 589835, 9, 0, 589836, 0, 0, 589837, 0, 0, 589838, 10, 0 )

[node name="Floor2" type="TileMap" parent="Background"]
position = Vector2( 0, 160 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 8, 0, 7, 8, 0, 8, 8, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 8, 0, 65543, 8, 0, 65544, 8, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 8, 0, 131079, 8, 0, 131080, 8, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 8, 0, 196615, 8, 0, 196616, 8, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 8, 0, 262151, 8, 0, 262152, 8, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 8, 0, 327687, 8, 0, 327688, 8, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 8, 0, 393223, 8, 0, 393224, 8, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 8, 0, 458759, 8, 0, 458760, 8, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 8, 0, 524295, 8, 0, 524296, 8, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 8, 0, 589831, 8, 0, 589832, 8, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0 )

[node name="Walls2" type="TileMap" parent="Background"]
position = Vector2( 0, 160 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 1, 28, 0, 4, 0, 0, 5, 28, 0, 6, 8, 0, 7, 8, 0, 8, 8, 0, 9, 0, 0, 10, 28, 0, 11, 0, 0, 12, 10, 0, 13, 0, 0, 65536, 0, 0, 65537, 9, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 9, 0, 65542, 8, 0, 65543, 8, 0, 65544, 8, 0, 65545, 0, 0, 65546, 9, 0, 65547, 0, 0, 65548, 0, 0, 65549, 28, 0, 65550, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 10, 0, 131075, 0, 0, 131076, 10, 0, 131077, 0, 0, 131078, 8, 0, 131079, 8, 0, 131080, 8, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 9, 0, 131086, 0, 0, 196608, 10, 0, 196609, 0, 0, 196610, 0, 0, 196611, 28, 0, 196612, 0, 0, 196613, 0, 0, 196614, 8, 0, 196615, 8, 0, 196616, 8, 0, 196617, 10, 0, 196618, 0, 0, 196619, 10, 0, 196620, 0, 0, 196621, 0, 0, 196622, 28, 0, 262144, 0, 0, 262145, 28, 0, 262146, 0, 0, 262147, 9, 0, 262148, 0, 0, 262149, 0, 0, 262150, 8, 0, 262151, 8, 0, 262152, 8, 0, 262153, 0, 0, 262154, 28, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 9, 0, 327680, 0, 0, 327681, 9, 0, 327682, 0, 0, 327683, 0, 0, 327684, 28, 0, 327685, 0, 0, 327686, 8, 0, 327687, 8, 0, 327688, 8, 0, 327689, 0, 0, 327690, 9, 0, 327691, 0, 0, 327692, 28, 0, 327693, 10, 0, 327694, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 10, 0, 393219, 0, 0, 393220, 9, 0, 393221, 0, 0, 393222, 8, 0, 393223, 8, 0, 393224, 8, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 9, 0, 393229, 0, 0, 393230, 0, 0, 458752, 0, 0, 458753, 28, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 8, 0, 458759, 8, 0, 458760, 8, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 28, 0, 458766, 0, 0, 524288, 0, 0, 524289, 9, 0, 524290, 0, 0, 524291, 28, 0, 524292, 0, 0, 524293, 10, 0, 524294, 8, 0, 524295, 8, 0, 524296, 8, 0, 524297, 10, 0, 524298, 0, 0, 524299, 28, 0, 524300, 0, 0, 524301, 9, 0, 524302, 0, 0, 589824, 10, 0, 589825, 0, 0, 589826, 0, 0, 589827, 9, 0, 589828, 0, 0, 589829, 0, 0, 589830, 8, 0, 589831, 8, 0, 589832, 8, 0, 589833, 0, 0, 589834, 0, 0, 589835, 9, 0, 589836, 0, 0, 589837, 0, 0, 589838, 10, 0 )

[node name="Background2" type="Node2D" parent="."]
position = Vector2( 0, 320 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Floor" type="TileMap" parent="Background2"]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 8, 0, 7, 8, 0, 8, 8, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 8, 0, 65543, 8, 0, 65544, 8, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 8, 0, 131079, 8, 0, 131080, 8, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 8, 0, 196615, 8, 0, 196616, 8, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 8, 0, 262151, 8, 0, 262152, 8, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 8, 0, 327687, 8, 0, 327688, 8, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 8, 0, 393223, 8, 0, 393224, 8, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 8, 0, 458759, 8, 0, 458760, 8, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 8, 0, 524295, 8, 0, 524296, 8, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 8, 0, 589831, 8, 0, 589832, 8, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0 )

[node name="Walls" type="TileMap" parent="Background2"]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 1, 28, 0, 4, 0, 0, 5, 28, 0, 6, 8, 0, 7, 8, 0, 8, 8, 0, 9, 0, 0, 10, 28, 0, 11, 0, 0, 12, 10, 0, 13, 0, 0, 65536, 0, 0, 65537, 9, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 9, 0, 65542, 8, 0, 65543, 8, 0, 65544, 8, 0, 65545, 0, 0, 65546, 9, 0, 65547, 0, 0, 65548, 0, 0, 65549, 28, 0, 65550, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 10, 0, 131075, 0, 0, 131076, 10, 0, 131077, 0, 0, 131078, 8, 0, 131079, 8, 0, 131080, 8, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 9, 0, 131086, 0, 0, 196608, 10, 0, 196609, 0, 0, 196610, 0, 0, 196611, 28, 0, 196612, 0, 0, 196613, 0, 0, 196614, 8, 0, 196615, 8, 0, 196616, 8, 0, 196617, 10, 0, 196618, 0, 0, 196619, 10, 0, 196620, 0, 0, 196621, 0, 0, 196622, 28, 0, 262144, 0, 0, 262145, 28, 0, 262146, 0, 0, 262147, 9, 0, 262148, 0, 0, 262149, 0, 0, 262150, 8, 0, 262151, 8, 0, 262152, 8, 0, 262153, 0, 0, 262154, 28, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 9, 0, 327680, 0, 0, 327681, 9, 0, 327682, 0, 0, 327683, 0, 0, 327684, 28, 0, 327685, 0, 0, 327686, 8, 0, 327687, 8, 0, 327688, 8, 0, 327689, 0, 0, 327690, 9, 0, 327691, 0, 0, 327692, 28, 0, 327693, 10, 0, 327694, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 10, 0, 393219, 0, 0, 393220, 9, 0, 393221, 0, 0, 393222, 8, 0, 393223, 8, 0, 393224, 8, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 9, 0, 393229, 0, 0, 393230, 0, 0, 458752, 0, 0, 458753, 28, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 8, 0, 458759, 8, 0, 458760, 8, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 28, 0, 458766, 0, 0, 524288, 0, 0, 524289, 9, 0, 524290, 0, 0, 524291, 28, 0, 524292, 0, 0, 524293, 10, 0, 524294, 8, 0, 524295, 8, 0, 524296, 8, 0, 524297, 10, 0, 524298, 0, 0, 524299, 28, 0, 524300, 0, 0, 524301, 9, 0, 524302, 0, 0, 589824, 10, 0, 589825, 0, 0, 589826, 0, 0, 589827, 9, 0, 589828, 0, 0, 589829, 0, 0, 589830, 8, 0, 589831, 8, 0, 589832, 8, 0, 589833, 0, 0, 589834, 0, 0, 589835, 9, 0, 589836, 0, 0, 589837, 0, 0, 589838, 10, 0 )

[node name="Floor2" type="TileMap" parent="Background2"]
position = Vector2( 0, 160 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 8, 0, 7, 8, 0, 8, 8, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 8, 0, 65543, 8, 0, 65544, 8, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 8, 0, 131079, 8, 0, 131080, 8, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 8, 0, 196615, 8, 0, 196616, 8, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 8, 0, 262151, 8, 0, 262152, 8, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 8, 0, 327687, 8, 0, 327688, 8, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 8, 0, 393223, 8, 0, 393224, 8, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 8, 0, 458759, 8, 0, 458760, 8, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 8, 0, 524295, 8, 0, 524296, 8, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 8, 0, 589831, 8, 0, 589832, 8, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0 )

[node name="Walls2" type="TileMap" parent="Background2"]
position = Vector2( 0, 160 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 1, 28, 0, 4, 0, 0, 5, 28, 0, 6, 8, 0, 7, 8, 0, 8, 8, 0, 9, 0, 0, 10, 28, 0, 11, 0, 0, 12, 10, 0, 13, 0, 0, 65536, 0, 0, 65537, 9, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 9, 0, 65542, 8, 0, 65543, 8, 0, 65544, 8, 0, 65545, 0, 0, 65546, 9, 0, 65547, 0, 0, 65548, 0, 0, 65549, 28, 0, 65550, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 10, 0, 131075, 0, 0, 131076, 10, 0, 131077, 0, 0, 131078, 8, 0, 131079, 8, 0, 131080, 8, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 9, 0, 131086, 0, 0, 196608, 10, 0, 196609, 0, 0, 196610, 0, 0, 196611, 28, 0, 196612, 0, 0, 196613, 0, 0, 196614, 8, 0, 196615, 8, 0, 196616, 8, 0, 196617, 10, 0, 196618, 0, 0, 196619, 10, 0, 196620, 0, 0, 196621, 0, 0, 196622, 28, 0, 262144, 0, 0, 262145, 28, 0, 262146, 0, 0, 262147, 9, 0, 262148, 0, 0, 262149, 0, 0, 262150, 8, 0, 262151, 8, 0, 262152, 8, 0, 262153, 0, 0, 262154, 28, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 9, 0, 327680, 0, 0, 327681, 9, 0, 327682, 0, 0, 327683, 0, 0, 327684, 28, 0, 327685, 0, 0, 327686, 8, 0, 327687, 8, 0, 327688, 8, 0, 327689, 0, 0, 327690, 9, 0, 327691, 0, 0, 327692, 28, 0, 327693, 10, 0, 327694, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 10, 0, 393219, 0, 0, 393220, 9, 0, 393221, 0, 0, 393222, 8, 0, 393223, 8, 0, 393224, 8, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 9, 0, 393229, 0, 0, 393230, 0, 0, 458752, 0, 0, 458753, 28, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 8, 0, 458759, 8, 0, 458760, 8, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 28, 0, 458766, 0, 0, 524288, 0, 0, 524289, 9, 0, 524290, 0, 0, 524291, 28, 0, 524292, 0, 0, 524293, 10, 0, 524294, 8, 0, 524295, 8, 0, 524296, 8, 0, 524297, 10, 0, 524298, 0, 0, 524299, 28, 0, 524300, 0, 0, 524301, 9, 0, 524302, 0, 0, 589824, 10, 0, 589825, 0, 0, 589826, 0, 0, 589827, 9, 0, 589828, 0, 0, 589829, 0, 0, 589830, 8, 0, 589831, 8, 0, 589832, 8, 0, 589833, 0, 0, 589834, 0, 0, 589835, 9, 0, 589836, 0, 0, 589837, 0, 0, 589838, 10, 0 )

[node name="Food" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Authors" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -479.0
margin_top = 320.0
margin_right = 480.0
margin_bottom = 1247.0
rect_min_size = Vector2( 959, 927 )
custom_fonts/font = SubResource( 2 )
text = "Game author: ShivaRa ( aka Gelium )


External Resources:

Charecter 16x16
Copyright/Attribution Notice: 
Nothing! Do whatever! But please let me know if you publish anything with him, would love to play it :)

Town_tiles
Author: surt

food
unknow author CC0

bird
Copyright/Attribution Notice: 
Spring/Flofflewoffle Flooferwoofer

music
Soundtrack by Monplaisir Loyalty Freak Music

step sound
Author: TinyWorlds

TES 2 Daggerfall: HALT!

Spaceship 2D, feel free to use it however you like, SVG file included. If you want more graphics like this visit https://gameassets.itch.io 

 
Thanks for playing!"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogWindow" type="Control" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="CanvasLayer/DialogWindow"]
margin_left = 149.024
margin_top = 197.206
margin_right = 372.024
margin_bottom = 302.206
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="CanvasLayer/DialogWindow"]
margin_left = 566.124
margin_top = 200.249
margin_right = 768.124
margin_bottom = 299.249
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -30.0

[connection signal="pressed" from="CanvasLayer/DialogWindow/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="CanvasLayer/DialogWindow/Exit" to="." method="_on_Exit_pressed"]
